# practice-particles

./: CMakeLists.txt  README.md  button.c  button.h  dragarea.c  dragarea.h  engine.c  engine.h  main.c  slide.c  slide.cpp  slide.h  spec.c  spec.h
cmake/: FindSDL2.cmake
